# rust-python-interop

./: .gitignore  Makefile  example.py
pyo3_strd/: Cargo.toml
pyo3_strd/src/: lib.rs
rust_cpython_strd/: Cargo.toml
rust_cpython_strd/src/: lib.rs
